# ese5190-2022-lab2-into-the-void-star

./: .gitattributes  .gitignore  3.3 annotation.docx  3.4 Lab2.xlsx  3.4 List of registors.xlsx  3.4-embedded spreadsheet (1).xlsx  3.4.xls  3.4.xlsx  3.4Lab2.xlsx  3.4Spreadsheet.xlsx  3.4_Register_List.xlsx  3.4_Register_Spreadsheet.xlsx  3.4_RegistersList.docx  3.5.xlsx  3.6 spreadsheet.xlsx  3.6&3.7.xlsx  3.6-3.7 data and model.xlsx  3.6.xls  3.6.xlsx  3.6_3.7.xlsx  3.6_A trace of the entire packet transmission.xlsx  3.6_Transmission Diagram.xlsx  3.7 lab2.xlsx  3.7-3.6.xlsx  3.7.xlsx  3_TalkingLEDs.md  3dot4_ColourByNumber.xlsx  3dot6_ZoomingIn.xlsx  C code (1).docx  CMakeLists.txt  CMakelist.txt  Code annotation.pptx  ESE 519 Part 3.4.xlsx  ESE519-Spreadsheet.xlsx  ESE5190-3.7.xlsx  ESE5190_LAB2A.xlsx  ESE_519_lab_2a_3.4.xlsx  LAB2 WRITEUP.md  LICENSE  Lab2 - Instruction.md  (+44 more)
3.4/: 3.4_Register.xlsx
3.6/: 3.6.xlsx
4/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
4_hello_usb_plus_led/: CMakeLists.txt  adafruit_itsybitsy_rp2040.h  hello_usb_plus_led.c  ws2812.c  ws2812.pio.h
Code-for-Lab-2-Q4/: CMakeLists.txt  ws2812.c
ESE5190 Lab 2 Q 3/: ESE5190 Lab 2 Q 3.3 - annotated code.docx  ESE5190 Lab 2 Q 3.4 _ Initial PIO register states.xlsx  ESE5190 Lab 2 Q 3.6 and 3.7.xlsx  Timing diagram ESE5190 Lab 2A Q3.7.drawio
ESE519_LAB2A_PART4/: CMakeLists.txt
ESE519_LAB2A_PART4/pio/ws2812/: CMakeLists.txt  ws2812.c
LAB2_A/: 3.4_1.xlsx  3_6.xlsx  LAB2A_code
LAB2_A/LAB2A_code/: readme.mk  test.c
LAB2_A/LAB2A_code/Blink/: test.c
LAB2_A/LAB2A_code/USB_C/: CMakeLists.txt  readme.mk
LAB2_A/LAB2A_code/ws2812/: ws2812.c
Lab 2 Prob3/: 3.6.xlsx
Lab02/: CMakeLists.txt
Lab02/usb/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
Lab2A/: CMakeLists.txt  CONTRIBUTING.md
Lab2A/pio/: CMakeLists.txt
Lab2A/pio/addition/: CMakeLists.txt  addition.c  addition.pio
Lab2A/pio/clocked_input/: CMakeLists.txt
Lab2A/pio/hello_pio/: CMakeLists.txt  hello.pio
Lab2A/pio/hub75/: CMakeLists.txt
Lab2A/pio/i2c/: CMakeLists.txt  pio_i2c.c
Lab2A/pio/ir_nec/: CMakeLists.txt  README.adoc
Lab2A/pio/logic_analyser/: CMakeLists.txt  logic_analyser.c
Lab2A/pio/manchester_encoding/: manchester_encoding.c  manchester_encoding.pio
Lab2A/pio/pio_blink/: CMakeLists.txt
Lab2A/pio/pwm/: pwm.c
Lab2A/pio/quadrature_encoder/: quadrature_encoder.pio
Lab2A/pio/spi/: CMakeLists.txt  spi_loopback.c
Lab2A/pio/st7789_lcd/: raspberry_256x256_rgb565.h
Lab2A/pio/ws2812/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
Lab2A_helloLED/: CMakeLists.txt  Hello_usb_plus_led.c  ws2812.c  ws2812.h
Lab2_A/: CMakeLists.txt
Lab2_A/pio/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
P3/: 3.4Initial PIO0 register states.xlsx  3.6 Zooming in.xlsx
P4/: CMakeLists.txt
P4/pio/ws2812/: CMakeLists.txt  ws2812.c
P4_code/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
Part 3/: 3.4 Spreadsheet 1.xlsx  Part 3.4.xlsx  Part 3.6.xlsx
Part 4/: CMakeLists.txt  hello_with_led.c
Part 4 ESE 519/: CMakeLists.txt  ws2812.c
Part 4 code/: CMakeLists.txt
Part 4 code/pio/: CMakeLists.txt
Part 4 code/pio/ws2812/: CMakeLists.txt  ws2812.c
Part 4/PIO/ws2812/: CMakeLists.txt  ws2812.c
Part 4/USB + WS2812 code/new_ hello_usb_plus_color/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
Part3/: 3.4.xlsx  3.6.xlsx
Part3/3.4/: PIO Lisf of Registers.xlsx
Part3/3.6&3.7/: 3.6&3.7.xlsx
Part4/pico-project/: CMakeLists.txt
Part4_Code/: hello_usb.c  ws2812.c
Part4_Final/: BasicSetup.md  CMakeLists.txt
Part4_Final/pio/: CMakeLists.txt  hello_usb.c  ws2812.c
Part4_code/: 1
Q4/: CMakeLists.txt  ws2812.c
Spreadsheet/: Lab_2_part_3.xlsx
The Final Code folder/: ws2812.c
USB+WS2812/: folder
WS2812_LED/: CMakeLists.txt  WS2812_LED.c  WS2812_LED.h
assets/: .~3.6.xlsx  3.4.xlsx  3.6-320.xlsx  3.6.xlsx  List of Registers.xlsx
guide/: RP2040-C-SDK-setup.md
guides/: RP2040-C-SDK-setup.md
hello_blink - Part 4/: CMakeLists.txt  ws2812.c  ws2812.h
hello_blinkenlight/: CMakeLists.txt  ws2812.c
hello_led/: CMakeLists.txt  hello_usb_plus_led.c  ws2812.c  ws2812.h
hello_usb/: CMakeLists.txt  hellousb.c  ws2812.c  ws2812.h
hello_world/: CMakeLists.txt  example_auto_set_url.cmake  hello.c  hello.pio
lab2/: CMakeLists.txt  ws2812.h
lab2 prob4/: CMakeLists.txt
lab2 prob4/pio/ws2812/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
lab2A/: CMakeLists.txt
lab2A/pio/ws2812/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
lab2A_code/lab2A_code/: CMakeLists.txt
lab2A_code/lab2A_code/hello_usb/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
lab2_submissionfiles/: CMakeLists.txt
lab2_submissionfiles/helloLED2/: CMakeLists.txt  hello_LED.c  ws2812.c  ws2812.h
lab2a_part4/: CMakeLists.txt  hello_usb_plus_led.c  lab2a_part4.code-workspace  ws2812.c
lab2part4/pio/: CMakeLists.txt
lab2part4/pio/ws2812/: hello_usb.c  ws2812.c
lab2q3/pio/: CMakeLists.txt  ws2812.c
lab2q4/: CMakeLists.txt  ws2812.c
lab2q4/pio/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
lab4/: de
ledhello/: CMakeLists.txt  Readme.md  ws2812.c
ndo_usb_ws2812/: CMakeLists.txt  usb_ws2812.c
p4/pio/ws2812/: CMakeLists.txt  ws2812.c
part3/: part3.md  printRegisters2.txt  printRegisters_beforePut_pixel.txt  ws2812pio.docx  ws2812pio.txt
part4/: CMakeLists.txt  README.md
part4/cmake/build_variants/: CMakeLists.txt  main.c  other.c  other.h
part4/part4/: CMakeLists.txt  hello_usb.c  ws2812.c  ws2812.h
part4/pio/: CMakeCache.txt  CMakeLists.txt
part4/pio/apa102/: CMakeLists.txt
part4/pio/clocked_input/: clocked_input.c  clocked_input.pio
part4/pio/hello_pio/: hello.c
part4_code/: hello_usb.c  ws2812.c
pico-Lab2test/: .gitignore  CMakeLists.txt
pico-diy/: CMakeLists.txt
pio/: CMakeLists.txt  ws2812.c
pio/ws2812/: BackupCMakeLists.txt  CMakeLists.txt  hello_usb.c  main.c  ws2812.c  ws2812.h
q4/pio/: CMakeLists.txt
section_3/: section3.xlsx
test/: CMakeLists.txt
ws2812/: CMakeLists.txt  ws2812.c
ws2812 and usb/: CMakeLists.txt  ws2812.c
ws2812_header/: ws2812.c  ws2812.h
(+57 files in other folders)
