cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(test_project)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(hello_usb hello_usb.c)
pico_enable_stdio_usb(hello_usb  1)
pico_enable_stdio_uart(hello_usb  1)
pico_add_extra_outputs(hello_usb )
target_link_libraries(hello_usb  pico_stdlib)